feat: melhorado documentação para o swagger
