# pkg/controllers/user_controller.go
@@ -7,6 +7,14 @@ import (
 	"github.com/kevinfinalboss/checklist-apps/pkg/services"
 )
 
+// GetUserByEmail godoc
+//
+//	@Summary		Buscar usuário por e-mail
+//	@Description	Busca as informações de um usuário pelo e-mail
+//	@Tags			usuário
+//	@Accept			json
+//	@Produce		json
+//	@Router			/user/email/{email} [get]
 func GetUserByEmail(c *gin.Context) {
 	email := c.Param("email")
 	user, err := services.GetUserByEmail(email)
@@ -17,6 +25,14 @@ func GetUserByEmail(c *gin.Context) {
 	c.JSON(http.StatusOK, user)
 }
 
+// GetUserAll godoc
+//
+//	@Summary		Buscar todos os usuários
+//	@Description	Busca todas as informações dos usuários
+//	@Tags			usuário
+//	@Accept			json
+//	@Produce		json
+//	@Router			/user/all [get]
 func GetUserAll(c *gin.Context) {
 	users, err := services.GetAllUsers()
 	if err != nil {
